--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "firebase": "latest",
     "prop-types": "latest",
+    "quill": "^2.0.3",
     "react": "latest",
     "react-dom": "latest",
     "react-router": "latest",
